Minor fix, making dropdown positioned vertically over the controls to prevent them covering its border

--- a/web/client/themes/default/less/widget.less
+++ b/web/client/themes/default/less/widget.less
@@ -162,6 +162,7 @@
             justify-content: center;
 
             .Select {
+                z-index: 11;
                 flex-grow: 1;
                 .Select-control {
                     margin: 0 auto;
